Bash script refactoring Signed-off-by:Jean-Francois James <jefrajames@gmail.com>