@@ -2,31 +2,42 @@
 
 clear
 
-. ./setEnv.sh
+EASYPAY_PORT=8080
+PAYARA_MICRO_HOME=~/javatools/payara-micro-5.193
+EASYPAY_WAR_FILE=~/javadev/demo/oco2019/easypay/target/easypay.war
+HSQLDB_HOME=~/javatools/hsqldb-2.5.0
 
-echo "Starting EasyPay with Payara Server. Thin war deployment"
+echo "Starting EasyPay with Payara Micro on port $EASYPAY_PORT"
 
-echo "War file :"
+echo "Hollow Jar deployment, 2 involved files:"
 du -h $EASYPAY_WAR_FILE
+du -h $PAYARA_MICRO_HOME/payara-micro-5.193.jar
 
-cat /dev/null > $PAYARA_HOME/glassfish/domains/oco/logs/server.log
-echo "Deploying on Payara Server Full 5.192:"
-du -sh $PAYARA_HOME
+echo ""
+echo ""
+echo ""
 
-echo "Starting Payara Server on ports 4848 (admin) and 8080 (apps)"
 
-START_SERVER_CMD="asadmin start-domain oco"
+if [ -z $1 ]
+then
+	echo "Running Payara Micro without OpenJ9 shared classes"
+	CMD="java --add-opens java.base/jdk.internal.loader=ALL-UNNAMED 
+	-jar $PAYARA_MICRO_HOME/payara-micro-5.193.jar
+	--noCluster --addJars $HSQLDB_HOME/lib/hsqldb.jar --port $EASYPAY_PORT
+	--deploy $EASYPAY_WAR_FILE"
+else
+	echo "Running Payara Micro with OpenJ9 shared classes"
+	CMD="java --add-opens java.base/jdk.internal.loader=ALL-UNNAMED 
+	-Xshareclasses:name=smartbank -Xtune:virtualized -Xscmx128m
+	-jar $PAYARA_MICRO_HOME/payara-micro-5.193.jar
+	--noCluster --addJars $HSQLDB_HOME/lib/hsqldb.jar --port $EASYPAY_PORT
+	--deploy $EASYPAY_WAR_FILE"
+fi
 
-echo "Running command"
-echo $START_SERVER_CMD
-echo "Strike any key when ready"
+
+echo $CMD
+
+echo "Type any key when ready"
 read
-time $START_SERVER_CMD
 
-echo "Deploying EasyPay War file"
-DEPLOY_APP_CMD="asadmin deploy $EASYPAY_WAR_FILE"
-echo "Running command"
-echo $DEPLOY_APP_CMD
-echo "Strike any key when ready"
-read
-time $DEPLOY_APP_CMD
+$CMD
